--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,3 +12,10 @@ scylla = "0.13.0"
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.37.0", features = ["full"] }
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "collections"
+harness = false
