--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.86"
 async-trait = "0.1.80"
 im = { version = "15.1.0", features = ["serde"] }
 rand = "0.8.5"
+rb_tree = "0.5.0"
 scylla = "0.13.0"
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
@@ -18,4 +19,8 @@ criterion = "0.5.1"
 
 [[bench]]
 name = "collections"
+harness = false
+
+[[bench]]
+name = "merge"
 harness = false
