--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 async-trait = "0.1.80"
+fxhash = "0.2.1"
 im = { version = "15.1.0", features = ["serde"] }
 rand = "0.8.5"
 scylla = "0.13.0"
@@ -22,4 +23,8 @@ harness = false
 
 [[bench]]
 name = "merge"
+harness = false
+
+[[bench]]
+name = "merge_base"
 harness = false
