--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,6 +16,7 @@ tokio = { version = "1.37.0", features = ["full"] }
 
 [dev-dependencies]
 criterion = "0.5.1"
+rb_tree = "0.5.0"
 
 [[bench]]
 name = "collections"
