--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,6 +17,7 @@ tokio = { version = "1.37.0", features = ["full"] }
 criterion = "0.5.1"
 rb_tree = "0.5.0"
 im = "15.1.0"
+clap = { version = "4.5.9", features = ["derive"] }
 
 [[bench]]
 name = "collections"
