--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -19,6 +19,9 @@ rb_tree = "0.5.0"
 im = "15.1.0"
 clap = { version = "4.5.9", features = ["derive"] }
 
+[profile.release]
+debug = true
+
 [[bench]]
 name = "collections"
 harness = false
@@ -30,3 +33,11 @@ harness = false
 [[bench]]
 name = "merge_base"
 harness = false
+
+[[bench]]
+name = "document"
+harness = false
+
+[[bin]]
+name = "profile_merge"
+path = "src/bin/profile_merge.rs"
