add some tracing

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 async-trait = "0.1.80"
+env_logger = "0.11.5"
 fxhash = "0.2.1"
 itertools = "0.13.0"
+log = "0.4.22"
 musli = { version = "0.0.122", features = ["storage"] }
 rand = "0.8.5"
 scylla = "0.13.0"
